--- a/.github/workflows/upload_replays.yml
+++ b/.github/workflows/upload_replays.yml
@@ -2,11 +2,11 @@ name: Upload LoL Replays
 
 on:
   schedule:
-    - cron: "*/15 * * * *"
+    - cron: "*/15 * * * *"  # cada 15 minutos
   workflow_dispatch:
 
 permissions:
-  contents: write
+  contents: write  # necesario para commit automático
 
 jobs:
   upload_replays:
@@ -14,7 +14,7 @@ jobs:
 
     env:
       RIOT_API_KEY: ${{ secrets.RIOT_API_KEY }}
-      GOOGLE_DRIVE_CREDENTIALS: ${{ secrets.GOOGLE_DRIVE_CREDENTIALS }}
+      GOOGLE_DRIVE_TOKEN: ${{ secrets.GOOGLE_DRIVE_TOKEN }}  # <-- usar token OAuth real
 
     steps:
       - uses: actions/checkout@v4
